add function select ampher

--- a/mapping_cm_Circle.html
+++ b/mapping_cm_Circle.html
@@ -33,10 +33,11 @@
     <div>
         <label for="ampher">Ampher in ChiangMai :</label>
         <select class="select" id="ampher" v-model="chiangMaiData.ampher">
-            
             <option v-for="chiangMaiData.ampher in chiangMaiData.ampher.name_th">{{ chiangMaiData.ampher.name_th }}</option>
         </select>
-        <input type="submit" value="Click">
+        <input type="submit" value="Click All">
+        <input type="submit" value="Hiv positive">
+        <input type="submit" value="Tester">
     </div>
 </body>
 <script type="text/javascript" src="https://api.longdo.com/map/?key=5fd0f788c78c9ccfc192a5ea93d831ec"></script>
